Removed padding to prevent bug on iPhone5

--- a/src/components/Notifications/Notifications.scss
+++ b/src/components/Notifications/Notifications.scss
@@ -1,7 +1,8 @@
-.notificationIconContainer {
+.notificationIconBtn {
   background: none;
   border: none;
   display: inline-block;
+  padding: 0;
   position: relative;
 
   &:hover {
